fix: product variation alignment [#3331]

--- a/assets/scss/components/compat/woocommerce/_product.scss
+++ b/assets/scss/components/compat/woocommerce/_product.scss
@@ -143,23 +143,14 @@
 /* stylelint-disable */
 .woocommerce {
 
-	div.product form.cart .variations {
-
-		td {
-			padding: 0;
-			display: block;
-			width: 100%;
-
-			&.label {
-				padding: 0;
-			}
+  	div.product form.cart .variations {
+	  	td, th {
+		  padding: 0;
 		}
 
-		tr{
-		  display: block;
-		  &:not(:last-child) {
-			margin-bottom: $spacing-xs;
-		  }
+	  	tr{
+		  margin-bottom: $spacing-sm;
+		  display: grid;
 		}
 	}
 
